--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
