--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "slugify": "^1.6.5",
     "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "next-auth": "^4.20.1",
+    "@next-auth/prisma-adapter": "^1.0.4"
   }
 }
