--- a/package.json
+++ b/package.json
@@ -9,6 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calumk/editorjs-codeflask": "^1.0.9",
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/paragraph": "^2.9.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/raw": "^2.4.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.1",
+    "@editorjs/warning": "^1.3.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.11.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.5",
@@ -18,6 +36,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "^13.2.4",
     "next": "^13.2.4",
+    "next-auth": "^4.20.1",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
     "react": "18.2.0",
@@ -26,8 +45,6 @@
     "slugify": "^1.6.5",
     "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5",
-    "next-auth": "^4.20.1",
-    "@next-auth/prisma-adapter": "^1.0.4"
+    "typescript": "4.9.5"
   }
 }
