--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:qDbFSv4oh9yMJp4l@db.nnvechjzwddprzlzhnqy.supabase.co:5432/postgres"
+EMAIL_SERVER_HOST="sandbox.smtp.mailtrap.io"
+EMAIL_SERVER_PORT="2525"
+EMAIL_SERVER_USER="2a79b9c6f55553"
+EMAIL_SERVER_PASSWORD="8dbcca79f6d21e"
