--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.35.0",
+    "nodemailer": "^6.9.1",
     "eslint-config-next": "^13.2.4",
     "next": "^13.2.4",
     "next-auth": "^4.20.1",
@@ -45,6 +46,7 @@
     "slugify": "^1.6.5",
     "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
