this will work i hope

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,35 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:5d19bb963df6e2e7d4383cfc2b96235265c600ef3a1d6a7359f6eeaee20f270d
-size 744
+{
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/page.ts",
+    "src/app/page.tsx"
+  ],
+  "exclude": ["node_modules"]
+}
