--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,35 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:805a72281c1c3a66eff0f2df7cce8f9b86c4e2edcd939a3a0a19af3815e6273a
-size 709
+{
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/page.ts",
+    "src/app/page.tsx"
+  ],
+  "exclude": ["node_modules"]
+}
